# graph_agent

./: README.md  main.py  pyproject.toml
src/: agent_deep_research.py  agent_normal.py  agent_rag.py  agent_research.py  agent_scope.py  agent_supervisor.py  agent_top.py  configuration.py  constant.py  logger.py  state.py  sub_agent.py  utility.py
src/deep_research/: agent_research.py  agent_scope.py  agent_supervisor.py  state.py
src/langchain_milvus/: README.md  chunking.py  constant.py  db.py  demo.py  ingest_data.py  process.py  prompt.py  rag.py  searching.py  server.py  test.py  tools_utils.py  utility.py
src/mcp_client/: client.py
src/prompts/: prompt_final.py  prompt_rag.py  prompt_research.py  prompt_scope.py  prompt_supervisor.py  prompt_utility.py
