[project]
name = "portf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.9",
    "dotenv>=0.9.9",
    "langchain>=1.1.3",
    "langchain-aws>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-docling",
    "langchain-milvus>=0.3.2",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.5",
    "pymilvus[milvus-lite]>=2.6.5",
    "tavily-python>=0.7.16",
]
